Fix 2 columns on mobile: attempt #2

--- a/client/src/scss/styleguide/container.scss
+++ b/client/src/scss/styleguide/container.scss
@@ -32,7 +32,10 @@
   @include media(mobile) {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr;
-    grid-template-areas: "article adsRight";
+    grid-template-areas:
+      "article"
+      "adsRight"
+    ;
     gap: 1px;
   }
 
